depl-apps-2.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2022-11-30T20:01:20Z"
  generation: 5
  labels:
    app: wapp-depl2
  name: wapp-depl2
  namespace: default
  resourceVersion: "347562"
  uid: d3833d1c-036b-49d0-a6bd-3c9a6d60d364
spec:
  progressDeadlineSeconds: 30
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wapp-depl2
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wapp-depl2
    spec:
      containers:
      - image: a0z9/dock:wapp.0.5
        imagePullPolicy: IfNotPresent
        name: dock
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2022-11-30T20:01:20Z"
    lastUpdateTime: "2022-11-30T20:01:34Z"
    message: ReplicaSet "wapp-depl-5b65df97bb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-12-06T18:47:05Z"
    lastUpdateTime: "2022-12-06T18:47:05Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 5
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
