wapp0.1-depl-priv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wapp4
  name: wapp-depl-priv
  namespace: student
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: wapp4
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wapp4
        app2: wapp5-1
    spec:
      imagePullSecrets:
      - name: dock5001
      containers:
      - name: wapp-22    
        image: dock01:5001/wapp:0.5
        ports:
        - containerPort: 8080
