wapp0.1-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wapp5
  name: wapp5-depl
  namespace: student
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: wapp5
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wapp5
        app2: wapp5-1
    spec:
            #imagePullSecrets:
            #      - name: myreg
      containers:
      - name: wapp-22    
        image: a0z9/dock:wapp.0.5
        ports:
        - containerPort: 8080
