private-wapp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wapp5
  name: wapp5
  namespace: training
spec:
  ports:
  - nodePort: 31133
    port: 8099
    targetPort: 8080
  selector:
    app: wapp5
  sessionAffinity: None
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wapp5
  name: wapp5-depl
  namespace: training
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: wapp5
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wapp5
    spec:
      containers:
      - name: wapp-22    
        image: dock01:5002/wapp:1.0
        ports:
        - containerPort: 8080
      
      imagePullSecrets: 
        - name: dock5002
