wapp-svc2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wapp5-1
  name: wapp5-1
  namespace: student
spec:
  ports:
  - nodePort: 31133
    port: 8099
    targetPort: 8080
  selector:
    app2: wapp5-1
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
