wapp0.1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wapp01
  namespace: student

spec:
  ports:
    - targetPort: 8080
      port: 8099
