ingress1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: wapp-ingress2
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dock03
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
              name: wapp8-svc
              port:
                  number: 8085
